# ai-gov-api

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  create_admin_user.py  docker-compose.yml  insert_seed_data.py  pydantic_work.ipynb  pyproject.toml  requirements.txt  setuptest_macos.sh
Example_Notebook/: Example.ipynb
Examples/: LLM_stream_test.html
alembic/: env.py
alembic/versions/: 2591402acdfb_udpdate_api_key.py  bfe55c75f226_initial_migration.py
app/: main.py
app/auth/: api_key_services.py  dependencies.py  models.py  repositories.py  roles.py  schemas.py  scopes.py
app/backends/: base.py  bedrock.py  dependencies.py  exceptions.py  utils.py
app/common/: exceptions.py
app/config/: settings.py
app/db/: models.py  session.py
app/entities/: __init__.py  api_key.py  user.py
app/logs/: logging_config.py  middleware.py
app/providers/: base.py  dependencies.py  exceptions.py
app/repositories/: api_keys.py  users.py
app/routers/: api_v1.py  auth.py  root.py
app/schema/: api_key.py  bedrock.py  conversion.py  open_ai.py  user.py
app/services/: billing.py  llm_models.py
app/users/: models.py  repositories.py  schemas.py
docs/adr/: 002_SSO_Design.md  adr
scripts/: create_admin_user.py
tests/: conftest.py  test_api_authentication.py  test_api_scope_authorization.py  test_open_ai_conversion.py
tests/integration/: README.md  conftest.py  test_anonymization_handling.py  test_api_call_sequences.py  test_auth_errors.py  test_data_exposure.py  test_edge_cases_negative_testing.py  test_http_protocol_errors.py  (+4 more)
(+60 files in other folders)
